<resources>
    <string name="app_name">FroProject</string>
    <string name="login">登录</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册新用户</string>
    <string name="phone_num_tips">请输入正确手机号</string>
    <string name="not_null">不能为空</string>

    <string name="phone_hint1">请输入手机号</string>
    <string name="phone_hint2">请输入新手机号</string>
    <string name="auth_code_hint">请输入验证码</string>
    <string name="auth_code">验    证    码</string>
    <string name="auth_code_phone">手    机    号</string>
    <string name="auth_code_get">获取验证码</string>
    <string name="password_set">设置密码</string>
    <string name="password_set_hint">请设置密码</string>
    <string name="affirm_password">确认密码</string>
    <string name="affirm_password1">请确认密码</string>
    <string name="next_step">下一步</string>
    <string name="complete">完    成</string>
    <string name="password_not_match">密码与确认密码不相符</string>
    <string name="input_right_phone_number">请输入正确的手机号</string>
    <string name="input_right_auth_code">请输入正确的验证码</string>
    <string name="input_right_password">请输入正确的6-16位密码</string>


    <string name="nick_name">昵称</string>
    <string name="really_name">真实姓名</string>
    <string name="really_name_not_modify">真实姓名(不可修改)</string>
    <string name="sex">性别</string>
    <string name="sex_not_modify">未设置(不可修改)</string>
    <string name="age">年龄</string>
    <string name="email">电子邮箱</string>
    <string name="credentials">证件</string>
    <string name="credentials_number">证件号码</string>
    <string name="work_unit">工作单位</string>
    <string name="work_unit_hint">您所在机构准确信息</string>
    <string name="work_org">工作机构</string>
    <string name="job_position">职位</string>
    <string name="complete1">完成</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="not_setting">未设置</string>
    <string name="work_life">工作年限</string>
    <string name="birthday">出生日期</string>
    <string name="location">所在地</string>
    <string name="org_nature">机构性质</string>
    <string name="org_type">机构类别</string>
    <string name="org_detail">具体机构</string>
    <string name="org_branch">机构分支</string>
    <string name="org_detail_tips">请在分支机构中填写准确信息</string>
    <string name="personal_center">个人中心</string>
    <string name="check_org_nature">请选择机构性质</string>
    <string name="check_org_nature_and_type">请选择机构性质和机构类别</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="personal_center_tips">\'*\' 号项必填，提交后姓名、性别、证件号码不可修改</string>
    <string name="nick_name_not_null_tips">昵称不能为空</string>
    <string name="really_name_not_null_tips">真实姓名不能为空</string>
    <string name="sex_not_null_tips">请选择性别</string>
    <string name="birthday_not_null_tips">请选择生日</string>
    <string name="credentials_number_not_null_tips">请填写证件号码</string>
    <string name="message_err">数据上传失败</string>
    <string name="org_branch_not_null_tips">请填写机构分支</string>
    <string name="credentials_not_null_tips">请选择证件</string>
    <string name="org_nature_not_null_tips">请选择机构性质</string>
    <string name="org_type_not_null_tips">请选择机构类别</string>
    <string name="get_from_box">从相册获取</string>
    <string name="get_from_take_picture">拍照</string>
    <string name="sa_home_edit_pic_crop_bg">#99000000</string>
    <string name="welcome_tips">欢迎来到国际金融风险官</string>
    <string name="service_help">服务与支持</string>
    <string name="member_service">会员服务</string>
    <string name="service_phone_num">服务电话:400-</string>
    <string name="join_new_class">加入新班级</string>
    <string name="myclass">我的班级</string>
    <string name="total">共</string>
    <string name="course_unit">节课</string>
    <string name="pass_course">已通过课程：</string>
    <string name="order_right">课</string>
    <string name="history_class">历史班级</string>
    <string name="passed">已通过</string>
    <string name="not_passed_tips">未通过</string>
    <string name="not_passed">待通过</string>
    <string name="search_course">搜索课程</string>
    <string name="my_course">我的课程</string>
    <string name="progress_score">进度与成绩</string>
    <string name="order_left">第</string>
    <string name="pass_time1">通过时间：</string>
    <string name="passed_">已通过：</string>
    <string name="not_passed_">未通过：</string>
    <string name="not_study_">未学习</string>
    <string name="no_info">暂无数据</string>
    <string name="order_course">第%1$d课  %2$s</string>
    <string name="study">学习</string>
    <string name="previous_question">上一题</string>
    <string name="next_question">下一题</string>
    <string name="passed_tips">通过</string>
    <string name="class_directory">课程目录</string>
    <string name="login_out">退出登录</string>
    <string name="modify_phone_num">修改手机号</string>
    <string name="modify_password">修改密码</string>
    <string name="old_phone_num">原手机号</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="phone_unavailable_tips">如当前手机号已不可用，请联系</string>
    <string name="service_phone">400-</string>
    <string name="new_phone_num">新手机号</string>
    <string name="new_phone_use_tips">重新绑定后，原手机将不能作为登录账号</string>
    <string name="personal_info">个人资料</string>
</resources>
