<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <fro.org.froproject.mvp.ui.view.HeadView
        android:id="@id/headView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        style="@style/CommonLineStyle"
        android:layout_marginTop="60px" />

    <RelativeLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="143px"
        android:background="@color/white">

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="43px"
            android:text="@string/old_phone_num"
            android:textColor="#333333"
            android:textSize="43px" />

        <TextView
            android:singleLine="true"
            android:maxLength="11"
            android:gravity="center_vertical"
            android:id="@+id/phone_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="105px"
            android:layout_toRightOf="@id/phone"
            android:background="@color/cd_transparent"
            android:hint="@string/phone_hint"
            android:textColor="@android:color/black"
            android:textColorHint="#bcbcbc"
            android:textSize="43px" />
    </RelativeLayout>

    <View
        style="@style/CommonLineStyle"
        android:layout_marginLeft="43px" />

    <RelativeLayout
        android:id="@+id/auth_layout"
        android:layout_width="match_parent"
        android:layout_height="143px"
        android:background="@color/white">

        <TextView
            android:id="@+id/auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="43px"
            android:text="验  证  码"
            android:textColor="#333333"
            android:textSize="43px" />

        <EditText
            android:singleLine="true"
            android:maxLength="4"
            android:id="@+id/auth_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="105px"
            android:layout_toRightOf="@id/auth"
            android:background="@color/cd_transparent"
            android:hint="@string/auth_code_hint"
            android:textColor="#333333"
            android:textColorHint="#bcbcbc"
            android:textSize="43px" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="38px"
            android:text="@string/auth_code_get"
            android:textColor="@color/round_button_blue" />
    </RelativeLayout>

    <View style="@style/CommonLineStyle" />



    <View style="@style/CommonLineStyle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_unavailable_tips"
            android:textColor="#bcbcbc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_phone"
            android:textColor="#3a87d7" />
    </LinearLayout>

    <org.fro.common.widgets.tab.roundtextview.RoundRelativeLayout
        android:id="@+id/complete"
        android:layout_width="864px"
        android:layout_height="121px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="63px"
        android:gravity="center"
        android:textSize="100px"
        app:rv_backgroundColor="@color/round_button_blue"
        app:rv_cornerRadius="60px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="46px" />
    </org.fro.common.widgets.tab.roundtextview.RoundRelativeLayout>
</LinearLayout>